@@ -33,7 +33,7 @@ dependencies {
 
 	// JPA + MySQL
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.mysql:mysql-connector-j:9.2.0'
 
 	// Security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
@@ -43,6 +43,9 @@ dependencies {
 	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
+
+	// security.yml에 다른 설정(${jwt.secret}) 추가 시 경고 제거용!
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 
 	// Swagger
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'
@@ -61,12 +64,23 @@ dependencies {
 
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'org.assertj:assertj-core:3.27.7'
+	testImplementation 'org.springframework.boot:spring-boot-test-autoconfigure'
+	testImplementation 'org.springframework:spring-test'
+	testImplementation 'org.springframework.boot:spring-boot-webmvc-test'
 
 	// H2 (테스트용 인메모리 DB)
 	testRuntimeOnly 'com.h2database:h2'
+
+	// DevTools
+	runtimeOnly 'org.springframework.boot:spring-boot-devtools'
+
+	// QueryDSL
+	implementation 'com.querydsl:querydsl-jpa::jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 }
 
 jacoco {
@@ -75,7 +89,6 @@ jacoco {
 
 tasks.named('test', Test) {
 	useJUnitPlatform()
-	jvmArgs '-XX:+EnableDynamicAgentLoading'
 	finalizedBy jacocoTestReport
 }
 
@@ -84,5 +97,13 @@ jacocoTestReport {
 	reports {
 		xml.required = true
 		html.required = true
+	}
+	afterEvaluate {
+		classDirectories.setFrom(files(classDirectories.files.collect {
+			fileTree(dir: it, exclude: [
+					'**/Q*.class',
+					'**/entity/Q*'
+			])
+		}))
 	}
 }
